[package]
name = "rpi_ws281x-sys"
version = "0.1.0"
authors = ["Matthew Skolaut <mskolaut@tamu.edu>"]
license = "MIT/Apache-2.0"
keywords = ["ws8211", "rpi"]
repository = "https://github.com/tech2077/rpi_ws281x-rs"

build = "build.rs"

[lib]
name = "rpi_ws281x_sys"
path = "lib.rs"

[dependencies]

[build-dependencies]
gcc = "0.3"